--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,10 +1,12 @@
 html,
 body {
+  display: flex;
+  justify-content: center;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-}
+  font-family: Segoe UI,Helvetica Neue,Helvetica,Lucida Grande,Arial,Ubuntu,Cantarell,Fira Sans,sans-serif;
+  background-color: #0a1014;
+  }
 
 a {
   color: inherit;
